fixed z-index

--- a/frontend/src/components/DropdownSelect/style.scss
+++ b/frontend/src/components/DropdownSelect/style.scss
@@ -20,7 +20,7 @@
     background-color: #eeeeee;
     margin-top: 5px;
     width: 100%;
-    // visibility: hidden;
+    z-index: 10;
     position: absolute;
     border: solid 2px;
     border-radius: 10px;
